; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_stack.c_redcarpet_stack_init.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_stack.c_redcarpet_stack_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stack = type { i64, i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redcarpet_stack_init(%struct.stack* %0, i64 %1) #0 {
  %3 = alloca %struct.stack*, align 8
  %4 = alloca i64, align 8
  store %struct.stack* %0, %struct.stack** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.stack*, %struct.stack** %3, align 8
  %6 = getelementptr inbounds %struct.stack, %struct.stack* %5, i32 0, i32 2
  store i32* null, i32** %6, align 8
  %7 = load %struct.stack*, %struct.stack** %3, align 8
  %8 = getelementptr inbounds %struct.stack, %struct.stack* %7, i32 0, i32 1
  store i64 0, i64* %8, align 8
  %9 = load %struct.stack*, %struct.stack** %3, align 8
  %10 = getelementptr inbounds %struct.stack, %struct.stack* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i64 8, i64* %4, align 8
  br label %14

14:                                               ; preds = %13, %2
  %15 = load %struct.stack*, %struct.stack** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @redcarpet_stack_grow(%struct.stack* %15, i64 %16)
  ret i32 %17
}

declare dso_local i32 @redcarpet_stack_grow(%struct.stack*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
